--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@
 body{
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
+:root{
+    overflow-x: hidden;
+    max-width: 100%;
 }
 /* styling menu icon */
 .nav-menu{
